# ArtCC

Black/1/overflow/: sum.cpp
Black/2/binary/: CMakeLists.txt
Black/2/json/: CMakeLists.txt
Black/2/phonebook/: CMakeLists.txt
Black/2/phonebook/src/: contact.proto  main.cpp  phone_book.cpp  phone_book.h
Black/2/yellow_pages/: CMakeLists.txt
Black/2/yellow_pages/src/: merge.cpp  test.cpp  yellow_pages.h
Black/3/nucleotide/: CMakeLists.txt
Black/4/apply_to_many/: CMakeLists.txt
Black/4/is_one_of/: CMakeLists.txt
Black/4/optional/: CMakeLists.txt
Brown/1/hash_set/: CMakeLists.txt
Brown/1/next_in_set/: CMakeLists.txt
Brown/1/person/: CMakeLists.txt
Brown/1/point/: CMakeLists.txt
Brown/1/secondary_index/: CMakeLists.txt
Brown/2/aggregator/: CMakeLists.txt
Brown/2/game/: CMakeLists.txt
Brown/2/http/: CMakeLists.txt
Brown/2/ini/: CMakeLists.txt
Brown/2/json/: CMakeLists.txt
Brown/2/refactor/: CMakeLists.txt
Brown/2/xml/: CMakeLists.txt
Brown/3/concurrent_map/: CMakeLists.txt
Brown/3/expr/: CMakeLists.txt
Brown/3/lazy/: CMakeLists.txt
Brown/3/pipeline/: CMakeLists.txt
Brown/3/poly/: CMakeLists.txt
Brown/3/stats/: print_stats.cpp
Brown/3/synchronized/: CMakeLists.txt
Brown/3/zoo/: CMakeLists.txt
Brown/4/booking/: CMakeLists.txt
Brown/4/cache/: CMakeLists.txt
Brown/4/texture/: CMakeLists.txt
Brown/4/unique_ptr/: CMakeLists.txt
Brown/5/budget/: CMakeLists.txt
Brown/5/budget/src/: budget.cpp  budget_legacy.cpp  budget_mobile.cpp
Brown/5/domains/: CMakeLists.txt
Brown/5/test_domains/: CMakeLists.txt
Brown/5/test_stats/: CMakeLists.txt
Red/1/airline/: CMakeLists.txt
Red/1/deque/: CMakeLists.txt
Red/1/log/: CMakeLists.txt
Red/1/max_element_if/: max_element_if.cpp
Red/1/paginator/: CMakeLists.txt
Red/1/print_values/: CMakeLists.txt
Red/1/table/: CMakeLists.txt
Red/1/uniq_id/: uniq_id.cpp
Red/2/ebook/: CMakeLists.txt
Red/2/express/: CMakeLists.txt
Red/2/hotel/: hotel.cpp
Red/2/learn/: CMakeLists.txt
Red/2/rating/: CMakeLists.txt
Red/3/list/: CMakeLists.txt
Red/3/pool/: CMakeLists.txt
Red/3/pool/src/: pool.cpp
Red/3/revcopy/: CMakeLists.txt
Red/3/vector/: CMakeLists.txt
Red/4/airport/: CMakeLists.txt
Red/4/editor/: CMakeLists.txt
Red/4/server/: CMakeLists.txt
Red/4/sport/: sport.cpp
Red/4/stack_vector/: CMakeLists.txt
Red/4/translator/: CMakeLists.txt
Red/5/blog/: CMakeLists.txt
Red/5/group/: CMakeLists.txt
Red/5/josephus/: CMakeLists.txt
Red/5/matrix_sum/: CMakeLists.txt
Red/5/priority/: CMakeLists.txt
Red/5/split/: CMakeLists.txt
Red/5/synchronized/: CMakeLists.txt
White/1/binary/: binary.cpp
White/1/division/: division.cpp
White/1/equation/: equation.cpp
White/1/even/: even.cpp
White/1/gcd/: gcd.cpp
White/1/minstr/: minstr.cpp
White/1/price/: price.cpp
White/1/second_entrance/: second_entrance.cpp
White/2/anagram/: anagram.cpp
White/2/average/: average.cpp
White/2/bus/: bus_routes.cpp  routes_catalog.cpp
White/2/capitals_catalog/: catalog.cpp
White/2/factorial/: factorial.cpp
White/2/maximizer/: maximizer.cpp
White/2/monthly_affairs/: monthly_affairs.cpp
White/2/move_str/: move_str.cpp
White/2/palindrom/: palindrom.cpp
White/2/palindrom_filter/: palindrom_filter.cpp
White/2/reverse/: reverse.cpp
White/2/synonyms/: synonyms.cpp
White/2/unique_str/: unique_str.cpp
White/2/value_set/: value_set.cpp
White/2/worry_queue/: worry_queue.cpp
White/3/initialization/: init.cpp
White/3/names/: names.cpp
White/3/sort_abs/: sort_abs.cpp
White/3/sort_lowercase/: sort_lowercase.cpp
White/3/sorted_strings/: sorted_strings.cpp
White/3/string/: string.cpp
White/4/ensure_equal/: ensure_equal.cpp
White/4/func/: func.cpp
White/4/io/: cat.cpp  io.cpp  precision.cpp  students.cpp  table.cpp
White/4/lecture/: lecture.cpp
White/4/rational/: rational.cpp
White/4/time/: time.cpp
Yellow/1/average/: average.cpp
Yellow/1/blocks/: blocks.cpp
Yellow/1/matrix/: matrix.cpp
Yellow/1/ref/: ref.cpp
Yellow/1/region/: region.cpp
Yellow/1/sqr/: sqr.cpp
Yellow/1/tasks/: tasks.cpp
Yellow/2/equation/: CMakeLists.txt
Yellow/2/equation/src/: test_equation.cpp
Yellow/2/palindrom/: CMakeLists.txt
Yellow/2/person/: CMakeLists.txt
database/: CMakeLists.txt
database/src/: condition_parser.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h
mython/: CMakeLists.txt
mython/src/: lexer.cpp  lexer.h  lexer_test.cpp
search_engine/: CMakeLists.txt
search_engine/src/: iterator_range.h  main.cpp  search_server.cpp  search_server.h  synchronized.h
test_runner/: test_runner.cpp  test_runner.h
transport/: CMakeLists.txt
transport/src/: database.cpp  database.h  geo.cpp  geo.h  graph.h  json.cpp  json.h  main.cpp  range.h  renderer.cpp  route_map.cpp  route_map.h  router.cpp  svg.cpp  svg.h  transport_catalog.proto
(+132 files in other folders)
